--- a/website/html/index.html
+++ b/website/html/index.html
@@ -146,7 +146,7 @@
 <section>
 	<h3>Grids</h3>
 	<p>
-		Flexbox-based grids that keep markup semantic (if you can make up better names than <code>demo-two-of-four</code>, of course &mdash; something like <code>long-product</code> would be much better).
+		Flexbox-based responsive grids that keep markup semantic (if you can make up better names than <code>demo-two-of-four</code>, of course &mdash; something like <code>long-product</code> would be much better).
 		Infinitely nestable.
 	</p>
 	<p>
@@ -158,7 +158,7 @@
 }
 /* You're in control of the breakpoint!
    Tip: use @custom-media to avoid repeating yourself. */
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 38em) {
 	.grid-example {
 		inherit: %grid-flex;
 	}
@@ -370,6 +370,9 @@
 	<pre><code class="language-css">.form-feedback {
 	inherit: %form-stacked;
 }
+.form-feedback label {
+	color: color(var(--teal) shade(25%));
+}
 .form-feedback input,
 .form-feedback select,
 .form-feedback textarea {
@@ -387,7 +390,7 @@
 .form-feedback input:focus:invalid {
 	border-color: color(var(--red) shade(15%));
 }
-@media screen and (min-width: 640px) {
+@media screen and (min-width: 40em) {
 	.form-feedback {
 		inherit: %form-aligned;
 	}
@@ -509,6 +512,11 @@
 			&lt;td&gt;React&lt;/td&gt;
 			&lt;td&gt;&lt;a href="http://facebook.github.io/react/"&gt;facebook.github.io/react&lt;/a&gt;&lt;/td&gt;
 			&lt;td&gt;Facebook&lt;/td&gt;
+			&lt;!-- The example script turns it into:
+				&lt;td data-col-label="Name"&gt;React&lt;/td&gt;
+				...
+				You can do this in your templates instead.
+			--&gt;
 		&lt;/tr&gt;
 		&lt;!-- ... --&gt;
 	&lt;/tbody&gt;
@@ -516,7 +524,7 @@
 	<pre><code class="language-javascript">var ths = document.querySelectorAll('.table-frameworks th');
 var headings = [];
 for (var i = 0; i &lt; ths.length; i++)
-	headings.push(ths[i].innerText);
+	headings.push(ths[i].innerHTML);
 var trs = document.querySelectorAll('.table-frameworks tbody tr');
 for (var i = 0; i &lt; trs.length; i++) {
 	var tds = trs[i].getElementsByTagName('td');
@@ -553,7 +561,7 @@ for (var i = 0; i &lt; trs.length; i++) {
 		var ths = document.querySelectorAll('.table-frameworks th');
 		var headings = [];
 		for (var i = 0; i < ths.length; i++)
-			headings.push(ths[i].innerText);
+			headings.push(ths[i].innerHTML);
 		var trs = document.querySelectorAll('.table-frameworks tbody tr');
 		for (var i = 0; i < trs.length; i++) {
 			var tds = trs[i].getElementsByTagName('td');
@@ -630,5 +638,10 @@ for (var i = 0; i &lt; trs.length; i++) {
 		<span class="demo-triangle-up-right"></span>
 	</p>
 </section>
+
+<footer>
+	nextjs is made by <a href="https://github.com/myfreeweb">@myfreeweb</a>, licensed under <a href="https://www.tldrlegal.com/l/apache2">the apache license</a>.
+	thanks a lot &hearts; the authors of <a href="http://getbootstrap.com">bootstrap</a>, <a href="https://github.com/thoughtbot/bourbon">bourbon</a>, <a href="http://clrs.cc">clrs.cc</a>, <a href="http://alexwolfe.github.io/Buttons/">Buttons</a>, <a href="http://purecss.io">Pure</a>, <a href="http://necolas.github.io/normalize.css/">normalize.css</a>, <a href="http://typeplate.com">typeplate</a> and all the other things
+</footer>
 
 <script src="prism.js"></script>
