--- a/website/html/index.html
+++ b/website/html/index.html
@@ -8,6 +8,7 @@
 
 <header>
 	<h1>nextcss</h1>
+	<a href="https://github.com/myfreeweb/nextcss" class="button-pure">Star on GitHub!</a>
 </header>
 
 <section>
