npm link on website

--- a/website/html/index.html
+++ b/website/html/index.html
@@ -35,8 +35,7 @@
 <section>
 	<h2>Installation</h2>
 	<p>
-		nextcss will be available in the npm registry soon.
-		For now, you can install it from git using npm.
+		nextcss is <a href="https://www.npmjs.org/package/nextcss">available on npm</a>.
 	</p>
 	<p>
 		The <a href="http://npmjs.org">npm</a> module <code>nextcss</code> exports the Rework plugin.
