--- a/website/html/index.html
+++ b/website/html/index.html
@@ -581,10 +581,9 @@ for (var i = 0; i &lt; trs.length; i++) {
 	<p>
 		Alerts are created from a single color.
 		Use the clrs palette or a similarly not-too-dark-not-too-bright color.
-		Or do the <code>background</code>/<code>color</code>/<code>border-color</code> yourself (see <a href="#a-common-pattern">A common pattern</a>).
+		Or do the <code>background</code>/<code>color</code>/<code>border-color</code> yourself and use <code>inherit: %alert-base</code> instead of the <code>alert</code> mixin.
 	</p>
 	<pre><code class="language-css">.alert-success {
-	inherit: %alert-base;
 	alert: color(var(--green));
 	border-width: 0;
 }
