--- a/website/html/index.html
+++ b/website/html/index.html
@@ -100,23 +100,6 @@
 		I recommend <a href="http://filamentgroup.com/lab/compressive-images.html">compressive images</a> for photos and vector graphics (SVG, fonts) for everything else.
 	</p>
 </section>
-<section>
-	<a name="a-common-pattern"></a>
-	<h3>A common pattern</h3>
-	<p>
-		In nextcss, you'll often have to write code like this:
-	</p>
-	<pre><code class="language-css">.my-semantic-button-class {
-	inherit: %button-base;
-	button: bgcolor(white) /* ... any parameters */;
-}</code></pre>
-	<p>
-		<strong>You really have to understand this</strong>.
-		The <code>inherit</code> rule is for the common layout properties.
-		The <a href="https://github.com/reworkcss/rework-plugin-mixin">mixin</a>, like <code>button</code> or <code>alert</code>, is for visual properties like <code>background</code> and <code>color</code>.
-		Don't forget that you always can write these rules directly, without the mixins, while keeping the <code>inherit</code>.
-	</p>
-</section>
 
 <section>
 	<h3>Colors</h3>
@@ -224,11 +207,10 @@
 	</p>
 
 	<pre><code class="language-css">.button-pure {
-	inherit: %button-base;
 	button: bgcolor(var(--silver)) fgcolor(var(--black)) rounded;
 }
 .button-pure:hover, .button-pure:focus {
-	button: bgcolor(var(--silver)) fgcolor(var(--black)) shade-gradient;
+	button-style: bgcolor(var(--silver)) fgcolor(var(--black)) shade-gradient;
 }
 .button-pure:focus {
 	border-color: var(--blue);
@@ -240,11 +222,10 @@
 	</p>
 
 	<pre><code class="language-css">.button-success {
-	inherit: %button-base;
 	button: bgcolor(var(--green)) fgcolor(var(--white)) gradient;
 }
 .button-success:hover, .button-success:focus {
-	button: bgcolor(var(--green) shade(20%)) fgcolor(var(--white)) gradient bordered;
+	button-style: bgcolor(var(--green) shade(20%)) fgcolor(var(--white)) gradient bordered;
 }</code></pre>
 	<p>
 		<a href="javascript:void(0)" class="button-success">a.button-success</a>
@@ -253,11 +234,10 @@
 	</p>
 
 	<pre><code class="language-css">.button-borderonly {
-	inherit: %button-base;
 	button: bgcolor(var(--white)) fgcolor(var(--fuchsia)) borderonly pill;
 }
 .button-borderonly:hover, .button-borderonly:focus {
-	button: bgcolor(var(--white)) fgcolor(var(--yellow)) borderonly;
+	button-style: bgcolor(var(--white)) fgcolor(var(--yellow)) borderonly;
 }</code></pre>
 	<p>
 		<button class="button-borderonly">pill borderonly button</button>
@@ -265,11 +245,10 @@
 	</p>
 
 	<pre><code class="language-css">.button-yolo {
-	inherit: %button-base;
 	button: bgcolor(var(--purple)) circle(5em) gradient bordered;
 }
 .button-yolo:hover, .button-yolo:focus {
-	button: bgcolor(var(--yellow)) gradient bordered;
+	button-style: bgcolor(var(--yellow)) gradient bordered;
 }</code></pre>
 	<p>
 		<button class="button-yolo2">YOLO</button>
@@ -588,7 +567,6 @@ for (var i = 0; i &lt; trs.length; i++) {
 	border-width: 0;
 }
 .button-close {
-	inherit: %button-base;
 	button: bgcolor(transparent) fgcolor(inherit) circle(1.2em);
 }
 .button-close:focus {
